# linux-distro-agent

./: .gitignore  CHANGELOG.md  COMMANDS.md  COMPLETIONS.md  Cargo.toml  HOME_MANAGER_INTEGRATION.md  PHASE3_TEST_REPORT.md  POLISH_PLAN.md  README.md  TESTING_PHASE3.md  TRANSLATION_LAYER.md  benchmark_phase3.sh  flake.nix  home-manager-example.nix  install-completions.sh  install.sh  minimal-distro.toml  my-distro.toml  nix-packages.txt  pacman-packages.txt  release-notes-v0.3.3.md  release-notes-v4.0.0.md  release-notes-v4.7.0.md  release-notes-v4.9.0.md  result  test-enhanced-build.toml  test_agent.sh  test_phase3.sh  test_update_fix.sh  test_wizard.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
scripts/: lda-hm  setup-home-manager.sh
src/: agent.rs  cache.rs  compatibility_layer.rs  config.rs  config_manager.rs  config_wizard.rs  dependency_resolver.rs  distributed_cache.rs  distro.rs  distro_builder.rs  executor.rs  history.rs  logger.rs  main.rs  monitoring.rs  package_manager.rs  package_sources.rs  plugins.rs  remote_control.rs  repository_manager.rs  security.rs  self_update.rs  service_manager.rs  signing_verification.rs  system_config.rs  system_logger.rs  wsm.rs
