[package]
name = "linux-distro-agent"
version = "4.9.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
dirs = "5.0"
clap_complete = "4.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlite = "0.30"
num_cpus = "1.16"
semver = "1.0"
ctrlc = "3.0"
tempfile = "3.20.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
futures = "0.3"
rayon = "1.8"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
